# ruwt

./: Cargo.toml  Implementation.md  README.md  config.toml  prototype_config.toml
.github/workflows/: rust.yml
src/: boil.rs  commands.rs  config.rs  lib.rs  main.rs  server.rs
src/utils/: config.rs  config_data.rs  mod.rs  ruwt_error.rs  ruwt_types.rs
test/: serverconfig.toml
test2/: index.html  serverconfig.toml
test2/static/: style.css
