[package]
name = "ruwt"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
toml = "0.7.4"
