[package]
name = "ruwt"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "~0.6.2"
actix-web = "~4"
clap = { version = "~4", features = ["derive"] }
dirs = "~4"
env_logger = "~0.10.0"
log = "~0.4.18"
serde = { version = "~1", features = ["derive"] }
toml = "~0.7.4"
